--- a/task1.3.ipynb
+++ b/task1.3.ipynb
@@ -29,11 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Python Programming!\n",
+      "Hallo Welt!\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Welcome to Python Programming!')"
+    "print('Welcome to Python Programming!')\n",
+    "print('Hallo Welt!')"
    ]
   },
   {
@@ -64,7 +74,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### The job was done.\n",
+    "\n",
+    ">***I just love bold text.*** <br>\n",
+    ">>the cats *meow* <br>\n",
+    "> 1. Pizza <br>\n",
+    "> 2. Curry\n",
+    "> <ol>\n",
+    "> 1. Kokos <br>\n",
+    "> 2. Erdnuss\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,6 +118,26 @@
     "\n",
     "**<a id=\"#\">Task 1.3.7.</a>** Return to your assignment sheet when you feel like you have gotten an idea of how notebooks work."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
+   ]
   }
  ],
  "metadata": {
@@ -115,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
